[package]
name = "bookinv"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
json = "0.12.4"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlite = "0.36.1"
